--- a/inicio.html
+++ b/inicio.html
@@ -884,18 +884,11 @@
                             <div class="card-icon">
                                 <i class="fas fa-walking"></i>
                             </div>
-                            <h3 class="card-title">Inferiores</h3>
+                            <h3 class="card-title">Nutricionista</h3>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Treino de pernas com ênfase em força e resistência.</p>
-                            <div class="progress-bar">
-                                <div class="progress progress-2"></div>
-                            </div>
-                            <p>Progresso: 60% concluído</p>
-                        </div>
-                        <div class="card-footer">
-                            <span>Próximo: 14/10</span>
-                            <a href="#" class="btn btn-primary">Iniciar</a>
+                            <h1><p class="card-text">Ana Pereira</p></h1>
+                            
                         </div>
                     </div>
                 
