--- a/inicio.html
+++ b/inicio.html
@@ -893,6 +893,7 @@
                     </div>
                 
                 </div>
+            </section>
         </section>
 
         <section id="config" class="tab-content">
