--- a/inicio.html
+++ b/inicio.html
@@ -882,7 +882,7 @@
                     <div class="card card-2">
                         <div class="card-header">
                             <div class="card-icon">
-                                <i class="fas fa-walking"></i>
+                                <i class="fas fa-apple-alt"></i>
                             </div>
                             <h3 class="card-title">Nutricionista</h3>
                         </div>
@@ -901,8 +901,7 @@
                 <h1 class="page-title">Configurações</h1>
             </header>
             <div class="content-section">
-                <p>• Alterar senha<br>• Trocar foto de perfil<br>• Preferências de notificação<br>• Privacidade e dados</p>
-                <p>Personalize sua experiência como desejar.</p>
+                <h1> Em Breve... </h1>
             </div>
         </section>
 
