--- a/entrar.html
+++ b/entrar.html
@@ -220,7 +220,7 @@
 
                 <div class="form-help">
                     <a href="#">Esqueci minha senha</a>
-                    <a href="index.html">Criar conta</a>
+                    <a href="inicio.html">Criar conta</a>
                 </div>
 
                 <a href="inicio.html" type=submit" class="btn btn-primary">Continuar</button></a>
