--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     </ul>
                 </div>
                 <div class="benefit-category">
-                    <h3>Sisteterapia</h3>
+                    <h3>Fisioterapia</h3>
                     <ul>
                         <li>Alongamentos personalizados</li>
                         <li>Treinos preventivos</li>
